--- a/mangaApi.html
+++ b/mangaApi.html
@@ -67,6 +67,6 @@
         </p>
 </footer>
 
-  <script src="./src/js/index.js"></script> <!-- Link do JS -->
+  <script src="./src/js/manga.js"></script> <!-- Link do JS -->
 </body>
 </html>
